# LFinance

./: COMPILING.md  CONTRIBUTING.md  README.md  TODO.md  check_formatting  meson.build  money_watch.spec  uncrustify.cfg  update_cache.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml
data/: jcwasmx86.lfinance.desktop  jcwasmx86.money_watch.desktop  meson.build  resources.gresource.xml
docs/: Actions.md  Documentation.md
po/: POTFILES  de.po  de_DE.po  es.po  lfinance.pot  meson.build  money_watch.pot
src/: constants.vala  gui.vala  main.vala  meson.build  model.vala  modelBuilder.vala
src/account_exporters/: factory.vala  md.vala  pdf.vala
src/crypto/: decryption.vala  derive.vala  encryptedFileWriter.vala  encryption.vala
src/exporters/: factory.vala  pdf.vala  stats.vala
src/gui/: panel.vala
src/gui/dialogs/: encryptionSetupDialog.vala
src/gui/left/: accountActionHandler.vala  actionHandler.vala  addPanel.vala  bigList.vala  expander.vala  locationActionHandler.vala  tagActionHandler.vala  treeViewWithAction.vala
src/gui/left/dialogs/: addAccountDialog.vala  addLocationDialog.vala  addTagDialog.vala  coloredRadioButton.vala  customColorButton.vala  exportAccount.vala  exportModel.vala  locationEditDialog.vala  recommendedColorButton.vala  tagEditDialog.vala
src/gui/right/: accountInfo.vala  createExpense.vala  createExpenseWidget.vala  editWidget.vala  expenseList.vala  expenseWidget.vala  extendedTagButton.vala  locationButton.vala  overview.vala  tagButton.vala
src/gui/right/dialogs/: addTagDialog.vala
src/gui/shared/: scrollBox.vala  selectAccountFunc.vala
src/model/: account.vala  expense.vala  location.vala  model.vala  shared.vala  tag.vala
src/model/modelBuilder/: V1Builder.vala  V2Builder.vala  modelBuilderFactory.vala
src/test/: cryptoTest.vala  modelBuilderTest.vala  randomDataTest.vala  testUtils.vala  v1Test.vala  v2Test.vala
