datadir = join_paths(get_option('prefix'), get_option('datadir'))
icondir = join_paths(datadir, 'icons', 'hicolor')
install_data(join_paths('icons', 'jcwasmx86.money_watch.svg'), install_dir: join_paths(icondir, 'scalable', 'apps'))
install_data('jcwasmx86.money_watch.desktop', install_dir: join_paths(datadir, 'applications'))
